# python-package-template

./: .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 🐛-bug-report.md  💡-feature-request.md
docs/source/: api.md  conf.py  index.md  installation.md
src/mgnify_methods/: __init__.py
tests/: __init__.py  test_basic.py
